# rml_reward_machines

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
envs/: __init__.py
envs/cstr/: README.md  __init__.py  builder.py  encodings.py  env.py  manual_rm.py  reference_automaton.py  rml_generation.py
envs/letter_env/: README.md  __init__.py  builder.py  encodings.py  env.py  gnn_pretraining.py  gru_pretraining.py
envs/letter_env_core/: README.md  __init__.py  grid.py
envs/lunar_lander/: README.md  __init__.py  builder.py  encodings.py  env.py
envs/multitask_letter_env/: README.md  __init__.py  encodings.py  env.py  gru_pretraining.py  rml_generation.py  tasks.py
envs/randomized_letter_env/: README.md  __init__.py  builder.py  encodings.py  env.py
rml_rm/: __init__.py
rml_rm/agents/: __init__.py
rml_rm/encodings/: __init__.py  frozen.py  graph_models.py  graph_pretraining.py  monitor_state.py  rml_graph.py  rml_parser.py  rml_sequence.py  semantic_progress.py  vector.py
rml_rm/experiments/: __init__.py  runtime.py
rml_rm/monitors/: __init__.py  process.py  transaction.py
rml_rm/wrappers/: __init__.py  observation.py  rml_monitor.py
tests/: conftest.py
tests/core/: __init__.py  test_monitor_state_normalization.py  test_monitor_transaction.py  test_rml_monitor_wrapper.py
tests/cstr/: __init__.py  test_encodings_and_specs.py  test_env_contracts.py  test_graph_encoder_contracts.py  test_monitor_progress.py  test_reference_automaton.py  test_reward_shaping_contracts.py
tests/integration/: __init__.py  test_rml_monitor_process.py
(+1460 files in other folders)
