[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rml-reward-machines"
version = "0.1.0"
description = "Clean submission repository for RML reward machine experiments."
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [
  { name = "Khalid" }
]
dependencies = [
  "gymnasium[box2d]==0.28.1",
  "numpy==1.26.4",
  "PyYAML==6.0.3",
  "websocket_client==1.7.0",
  "pandas==2.3.3",
  "stable_baselines3==2.3.2",
  "torch==2.2.0",
  "tqdm==4.67.0",
  "matplotlib==3.8.2",
  "seaborn==0.13.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rml_rm*", "envs*"]
exclude = ["legacy*", "results*", "tests*"]

[tool.setuptools.package-data]
"envs.letter_env" = ["configs/*.json", "configs/*.yaml", "specs/*.pl"]
"envs.randomized_letter_env" = ["configs/*.yaml", "specs/*.pl"]
"envs.lunar_lander" = ["configs/*.yaml", "specs/*.pl"]
"rml_rm.monitors" = ["rml/*.pl", "rml/*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: slower training or rollout checks",
    "integration: tests requiring external monitor/runtime dependencies",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []
